add greeting, buttons disabled

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .infoBar {
-    opacity: 0;
-    /* color: crimson; */
-    animation: ani 2.5s forwards;
+    height: 30px;
+    color: crimson;
+    /* opacity: 0;
+    animation: ani 2.5s forwards; */
 }
 
-@keyframes ani {
+/* @keyframes ani {
     0% {opacity: 0;}
     100% {opacity: 1;}
-}
+} */
