--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,64 @@
-.infoBar {
+/* .infoBar {
     height: 30px;
     color: crimson;
-    /* opacity: 0;
-    animation: ani 2.5s forwards; */
-}
+    opacity: 0;
+    animation: ani 2.5s forwards;
+} */
 
 /* @keyframes ani {
     0% {opacity: 0;}
     100% {opacity: 1;}
 } */
+
+.container {
+    border: solid 1px red;
+    margin: 0 auto;
+    min-width: 500px;
+    
+}
+
+.title {
+    border: solid 1px rgb(255, 0, 191);
+    margin: 0 auto;
+    width: 450px;
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: firebrick;
+}
+
+.form {
+    border: solid 1px rgb(55, 0, 255);
+    margin: 0 auto;
+    width: 450px;
+    text-align: center;
+}
+
+.infobar {
+    border: solid 1px rgb(0, 255, 55);
+    margin: 0 auto;
+    width: 450px;
+    text-align: center; 
+    height: 60px;
+    color: crimson;
+}
+
+.result {
+    border: solid 1px rgb(208, 255, 0);
+    margin: 0 auto;
+    width: 300px;
+    text-align: left;
+}
+
+.input {
+    border: solid 1px rgb(107, 107, 107);
+    
+    border-radius: 5px;
+    margin: 10px;
+}
+
+.input:focus {
+    /* border: solid 5px rgb(107, 107, 107); */
+    border-radius: 5px;
+    outline: none;
+    box-shadow: 1px 1px 1px 1px red;
+}
