--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
     border: solid 1px red;
     margin: 0 auto;
     min-width: 500px;
-    
+
 }
 
 .title {
@@ -37,28 +37,66 @@
     border: solid 1px rgb(0, 255, 55);
     margin: 0 auto;
     width: 450px;
-    text-align: center; 
+    text-align: center;
     height: 60px;
     color: crimson;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14pt;
 }
 
 .result {
     border: solid 1px rgb(208, 255, 0);
     margin: 0 auto;
-    width: 300px;
+    padding: 10px;
+    width: 250px;
     text-align: left;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(44, 44, 44);
+    font-size: 14pt;
+    font-weight: 500;
 }
 
 .input {
-    border: solid 1px rgb(107, 107, 107);
-    
-    border-radius: 5px;
-    margin: 10px;
+    border: solid 3px rgb(255, 187, 0);
+    border-radius: 8px;
+    padding: 3px;
+    margin: 5px;
+    font-size: 12pt;
 }
 
 .input:focus {
-    /* border: solid 5px rgb(107, 107, 107); */
-    border-radius: 5px;
     outline: none;
-    box-shadow: 1px 1px 1px 1px red;
+}
+
+.button {
+    border: solid 3px rgb(255, 187, 0);
+    background-color: rgb(255, 187, 0);
+    padding: 3px;
+    border-radius: 8px;
+    font-size: 12pt;
+    color: rgb(34, 34, 34);
+    margin: 5px;
+}
+
+.button:active {
+
+    border: solid 3px rgb(238, 174, 0);
+    background-color: rgb(238, 174, 0);
+    padding: 3px;
+    border-radius: 8px;
+    font-size: 12pt;
+    margin: 5px;
+    color: rgb(34, 34, 34);
+}
+
+.button:disabled {
+
+    border: solid 3px rgb(255, 187, 0);
+    background-color: rgb(255, 187, 0);
+    padding: 3px;
+    border-radius: 8px;
+    font-size: 12pt;
+    color: rgb(34, 34, 34);
+    margin: 5px;
+    opacity: 50%;
 }
