--- a/src/App.css
+++ b/src/App.css
@@ -10,45 +10,54 @@
     100% {opacity: 1;}
 } */
 
+
+
+
 .container {
-    border: solid 1px red;
+    /* border: solid 1px red; */
     margin: 0 auto;
-    min-width: 500px;
+    /* min-width: 500px; */
+    background-color: beige;
 
 }
 
 .title {
-    border: solid 1px rgb(255, 0, 191);
+    /* border: solid 1px rgb(255, 0, 191); */
     margin: 0 auto;
-    width: 450px;
+    /* width: 450px; */
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: firebrick;
+    
 }
 
 .form {
-    border: solid 1px rgb(55, 0, 255);
+    /* border: solid 1px rgb(55, 0, 255); */
     margin: 0 auto;
-    width: 450px;
+    /* width: 450px; */
     text-align: center;
+    min-width: 220px;
 }
 
 .infobar {
-    border: solid 1px rgb(0, 255, 55);
+    /* border: solid 1px rgb(0, 255, 55); */
     margin: 0 auto;
-    width: 450px;
-    text-align: center;
-    height: 60px;
+    width: 240px;
+    text-align: left;
+    padding: 5px 5px 5px 15px;
+    height: 20px;
     color: crimson;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 14pt;
+    font-size: 12pt;
+    font-weight: 600;
+    font-style: italic;
 }
 
 .result {
-    border: solid 1px rgb(208, 255, 0);
+    /* border: solid 1px rgb(208, 255, 0); */
     margin: 0 auto;
     padding: 10px;
-    width: 250px;
+    width: 240px;
     text-align: left;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgb(44, 44, 44);
