--- a/src/App.css
+++ b/src/App.css
@@ -17,19 +17,32 @@
     /* border: solid 1px red; */
     margin: 0 auto;
     /* min-width: 500px; */
-    background-color: beige;
+    /* background-color: rgb(131, 131, 131); */
+    width: 450px;
 
 }
 
 .title {
     /* border: solid 1px rgb(255, 0, 191); */
-    margin: 0 auto;
+    margin: 50px 0px 0px 0px;
     /* width: 450px; */
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: firebrick;
-    
+    line-height: 0pt;
 }
+
+.underTitle {
+    /* border: solid 1px rgb(255, 0, 191); */
+    margin: 0 auto;
+    /* width: 450px; */
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* color: firebrick; */
+    /* line-height: 0pt; */
+    color: rgb(44, 44, 44);
+}
+
 
 .form {
     /* border: solid 1px rgb(55, 0, 255); */
@@ -41,16 +54,16 @@
 
 .infobar {
     /* border: solid 1px rgb(0, 255, 55); */
-    margin: 0 auto;
+    /* margin: 0 auto; */
     width: 280px;
     text-align: left;
     padding: 5px 5px 5px 15px;
     height: 20px;
-    color: crimson;
+    color: firebrick;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 12pt;
+    font-size: 10pt;
     font-weight: 600;
-    font-style: italic;
+    /* font-style: italic; */
 }
 
 .result {
@@ -63,6 +76,7 @@
     color: rgb(44, 44, 44);
     font-size: 14pt;
     font-weight: 500;
+    line-height: 10pt;
 }
 
 .input {
@@ -71,6 +85,7 @@
     padding: 3px;
     margin: 5px;
     font-size: 12pt;
+    background-color: rgb(236, 236, 236);
 }
 
 .input:focus {
@@ -108,4 +123,11 @@
     color: rgb(34, 34, 34);
     margin: 5px;
     opacity: 50%;
+}
+
+.rules {
+    margin: 0 auto;
+    width: 450px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 20pt;
 }
