--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,9 @@
 .container {
     /* border: solid 1px red; */
     margin: 0 auto;
-    min-width: 450px;
+    /* min-width: 450px; */
     /* background-color: rgb(131, 131, 131); */
-    /* width: 450px; */
+    width: 450px;
 
 }
 
@@ -47,36 +47,41 @@
 .form {
     /* border: solid 1px rgb(55, 0, 255); */
     margin: 0 auto;
+    
     /* width: 450px; */
     text-align: center;
-    min-width: 220px;
+    /* min-width: 220px; */
 }
 
 .infobar {
     /* border: solid 1px rgb(0, 255, 55); */
-    /* margin: 0 auto; */
+    margin: 0 auto;
     /* width: 280px; */
     text-align: left;
-    padding: 5px 5px 5px 15px;
+    padding: 5px 5px 5px 35px;
     height: 20px;
     color: firebrick;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 10pt;
-    font-weight: 600;
+    font-size: 12pt;
+    font-weight: 400;
     /* font-style: italic; */
+}
+
+.resultBox {
+    padding-top: 20px;
 }
 
 .result {
     /* border: solid 1px rgb(208, 255, 0); */
     margin: 0 auto;
-    padding: 10px;
-    width: 240px;
-    text-align: left;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 10px 0px 10px 45px;
+    /* width: 310px; */
+    text-align: left;    
     color: rgb(44, 44, 44);
-    font-size: 14pt;
-    font-weight: 500;
+    font-size: 18pt;    
     line-height: 10pt;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
 }
 
 .input {
@@ -84,7 +89,7 @@
     border-radius: 8px;
     padding: 3px;
     margin: 5px;
-    font-size: 12pt;
+    font-size: 30px;
     background-color: rgb(236, 236, 236);
 }
 
@@ -92,14 +97,34 @@
     outline: none;
 }
 
+.divButton {
+    /* border: solid 1px red; */
+    padding-top: 10px;
+
+}
+
+.infoButton {
+    border: solid 3px rgb(255, 187, 0);
+    background-color: rgb(255, 187, 0);
+    padding: 3px;
+    border-radius: 8px;
+    font-size: 20px;
+    color: rgb(34, 34, 34);
+    margin: 0px 0px 0px 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+}
+
 .button {
     border: solid 3px rgb(255, 187, 0);
     background-color: rgb(255, 187, 0);
     padding: 3px;
     border-radius: 8px;
-    font-size: 12pt;
+    font-size: 30px;
     color: rgb(34, 34, 34);
-    margin: 5px;
+    margin: 0px 10px 0px 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
 }
 
 .button:active {
@@ -108,8 +133,8 @@
     background-color: rgb(238, 174, 0);
     padding: 3px;
     border-radius: 8px;
-    font-size: 12pt;
-    margin: 5px;
+    font-size: 30px;
+    margin: 0px 10px 0px 0px;
     color: rgb(34, 34, 34);
 }
 
@@ -119,9 +144,9 @@
     background-color: rgb(255, 187, 0);
     padding: 3px;
     border-radius: 8px;
-    font-size: 12pt;
+    font-size: 30px;
     color: rgb(34, 34, 34);
-    margin: 5px;
+    margin: 0px 0px 0px 10px;
     opacity: 50%;
 }
 
