--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,9 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: firebrick;
     line-height: 0pt;
+    font-size: 40px;
+    font-weight: 700;
+    
 }
 
 .underTitle {
@@ -62,7 +65,7 @@
     height: 20px;
     color: firebrick;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 12pt;
+    font-size: 14pt;
     font-weight: 400;
     /* font-style: italic; */
 }
@@ -152,7 +155,11 @@
 
 .rules {
     margin: 0 auto;
-    width: 450px;
+    width: 460px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 20pt;
+}
+
+.backLink {
+    padding-top: 30px;
 }
