--- a/src/App.css
+++ b/src/App.css
@@ -24,15 +24,33 @@
 
 .title {
     /* border: solid 1px rgb(255, 0, 191); */
-    margin: 50px 0px 0px 0px;
+    margin: 20px 0px 0px 0px;
     /* width: 450px; */
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: firebrick;
-    line-height: 0pt;
+    /* line-height: 0px; */
     font-size: 40px;
     font-weight: 700;
+    padding-bottom: 0px;
+    /* border-bottom: 2px solid red; */
     
+}
+
+.title2 {
+    /* border: solid 1px rgb(255, 0, 191); */
+    margin: 0 auto;
+    /* width: 450px; */
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* color: firebrick; */
+    line-height: 10pt;
+    color: rgb(44, 44, 44);
+    /* border-bottom: 5px solid rgb(184, 184, 184); */
+    font-size: 14pt;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    font-weight: 700;    
 }
 
 .underTitle {
@@ -61,7 +79,7 @@
     margin: 0 auto;
     /* width: 280px; */
     text-align: left;
-    padding: 5px 5px 5px 35px;
+    padding: 5px 5px 5px 45px;
     height: 20px;
     color: firebrick;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -109,11 +127,11 @@
 .infoButton {
     border: solid 3px rgb(255, 187, 0);
     background-color: rgb(255, 187, 0);
-    padding: 3px;
+    padding: 10px 3px 10px 3px;
     border-radius: 8px;
-    font-size: 20px;
+    font-size: 30px;
     color: rgb(34, 34, 34);
-    margin: 0px 0px 0px 0px;
+    margin: 0px 10px 0px 0px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
@@ -121,11 +139,11 @@
 .button {
     border: solid 3px rgb(255, 187, 0);
     background-color: rgb(255, 187, 0);
-    padding: 3px;
+    padding: 10px 3px 10px 3px;
     border-radius: 8px;
     font-size: 30px;
     color: rgb(34, 34, 34);
-    margin: 0px 10px 0px 0px;
+    margin: 0px 10px 0px 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
@@ -134,10 +152,10 @@
 
     border: solid 3px rgb(238, 174, 0);
     background-color: rgb(238, 174, 0);
-    padding: 3px;
+    padding: 10px 3px 10px 3px;
     border-radius: 8px;
     font-size: 30px;
-    margin: 0px 10px 0px 0px;
+    margin: 0px 10px 0px 10px;
     color: rgb(34, 34, 34);
 }
 
@@ -145,19 +163,21 @@
 
     border: solid 3px rgb(255, 187, 0);
     background-color: rgb(255, 187, 0);
-    padding: 3px;
+    padding: 10px 3px 10px 3px;
     border-radius: 8px;
     font-size: 30px;
     color: rgb(34, 34, 34);
-    margin: 0px 0px 0px 10px;
+    margin: 0px 10px 0px 10px;
     opacity: 50%;
 }
 
 .rules {
+     /* border: solid 1px rgb(208, 255, 0); */
     margin: 0 auto;
-    width: 460px;
+    width: 400px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 20pt;
+    font-size: 16pt;
 }
 
 .backLink {
