--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@
     height: 20px;
     color: firebrick;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 14pt;
+    font-size: 16pt;
     font-weight: 400;
     /* font-style: italic; */
 }
@@ -99,6 +99,18 @@
     width: 310px;
     text-align: left;    
     color: rgb(44, 44, 44);
+    font-size: 18pt;    
+    line-height: 10pt;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+}
+
+.userNumber {
+    margin: 0 auto;
+    padding: 10px 0px 10px 0px;
+    width: 310px;
+    text-align: left;    
+    color: firebrick;
     font-size: 18pt;    
     line-height: 10pt;
     font-family: Arial, Helvetica, sans-serif;
