--- a/src/App.css
+++ b/src/App.css
@@ -144,18 +144,6 @@
 
 }
 
-.infoButton {
-    border: solid 3px rgb(255, 187, 0);
-    background-color: rgb(255, 187, 0);
-    padding: 10px 3px 10px 3px;
-    border-radius: 15px;
-    font-size: 30px;
-    color: rgb(34, 34, 34);
-    margin: 0px 10px 0px 0px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 400;
-}
-
 .button {
     border: solid 3px rgb(255, 187, 0);
     background-color: rgb(255, 187, 0);
@@ -207,7 +195,7 @@
 .form_radio_group-item {
     display: inline-block;
     float: left;
-
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .form_radio_group input[type=radio] {
