--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
+body {
+    background-color: rgb(236, 236, 236);
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%))
+}
+
 .container {
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
     /* border: solid 1px red; */
     margin: 0 auto;
     /* min-width: 450px; */
@@ -145,15 +153,17 @@
 }
 
 .button {
+    width: 180px;
+    height: 60px;
     border: solid 3px rgb(255, 187, 0);
     background-color: rgb(255, 187, 0);
     padding: 10px 6px 10px 6px;
     border-radius: 15px;
-    font-size: 30px;
+    font-size: 20px;
     color: rgb(34, 34, 34);
     margin: 0px 10px 0px 10px;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .button:hover {
@@ -161,22 +171,25 @@
 }
 
 .button:active {
-
+    width: 180px;
+    height: 60px;
     border: solid 3px rgb(238, 174, 0);
     background-color: rgb(238, 174, 0);
     padding: 10px 6px 10px 6px;
     border-radius: 15px;
-    font-size: 30px;
+    font-size: 20px;
     margin: 0px 10px 0px 10px;
     color: rgb(34, 34, 34);
 }
 
 .button:disabled {
+    width: 180px;
+    height: 60px;
     border: solid 3px rgb(255, 187, 0);
     background-color: rgb(255, 187, 0);
     padding: 10px 6px 10px 6px;
     border-radius: 15px;
-    font-size: 30px;
+    font-size: 20px;
     color: rgb(34, 34, 34);
     margin: 0px 10px 0px 10px;
     opacity: 50%;
@@ -264,21 +277,26 @@
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
-  }
-  
-  #customers td, #customers th {
+}
+
+#customers td,
+#customers th {
     border: 1px solid #ddd;
     padding: 8px;
-  }
-  
-  #customers tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #customers tr:hover {background-color: #ddd;}
-  
-  #customers th {
+}
+
+#customers tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#customers tr:hover {
+    background-color: #ddd;
+}
+
+#customers th {
     padding-top: 12px;
     padding-bottom: 12px;
-    text-align: left;
+    text-align: center;
     background-color: rgb(255, 187, 0);
     color: rgb(34, 34, 34);
-  }
+}
