--- a/src/App.css
+++ b/src/App.css
@@ -263,27 +263,27 @@ body {
 
 }
 
-#customers {
+#games {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
 
-#customers td,
-#customers th {
+#games td,
+#games th {
     border: 1px solid #ddd;
     padding: 8px;
 }
 
-#customers tr:nth-child(even) {
+#games tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-#customers tr:hover {
+#games tr:hover {
     background-color: #ddd;
 }
 
-#customers th {
+#games th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
