--- a/src/App.css
+++ b/src/App.css
@@ -164,7 +164,8 @@ body {
     margin: 0px 10px 0px 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
-    cursor: pointer;    
+    cursor: pointer; 
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);   
 }
 
 .button__game-button {
