--- a/src/App.css
+++ b/src/App.css
@@ -146,6 +146,10 @@ body {
     outline: none;
 }
 
+.link {
+-webkit-tap-highlight-color: rgba(0, 0, 0, 0);  
+}
+
 .divButton {
     /* border: solid 1px red; */
     padding-top: 10px;
