--- a/src/App.css
+++ b/src/App.css
@@ -271,7 +271,7 @@ body {
 #games {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 95%;
+    width: 440px;
 }
 
 #games td,
