--- a/src/App.css
+++ b/src/App.css
@@ -295,3 +295,21 @@ body {
     background-color: rgb(255, 187, 0);
     color: rgb(34, 34, 34);
 }
+
+.loader {
+    border: 2px solid #f3f3f3; /* Light grey */
+    border-top: 2px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 12px;
+    height: 12px;
+    animation: spin 2s linear infinite;
+ }
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.hide-loader{
+display:none;
+}
