--- a/src/App.css
+++ b/src/App.css
@@ -1,315 +1,318 @@
 body {
-    background-color: rgb(236, 236, 236);
-    overflow-x: hidden;
-    margin-right: calc(-1 * (100vw - 100%))
+  background-color: rgb(236, 236, 236);
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
 .container {
-    overflow-x: hidden;
-    margin-right: calc(-1 * (100vw - 100%));
-    /* border: solid 1px red; */
-    margin: 0 auto;
-    /* min-width: 450px; */
-    /* background-color: rgb(131, 131, 131); */
-    width: 450px;
-    text-align: center;
-
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+  /* border: solid 1px red; */
+  margin: 0 auto;
+  /* min-width: 450px; */
+  /* background-color: rgb(131, 131, 131); */
+  width: 450px;
+  text-align: center;
 }
 
 .title {
-    /* border: solid 1px rgb(255, 0, 191); */
-    margin: 20px 0px 0px 0px;
-    /* width: 450px; */
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: firebrick;
-    /* line-height: 0px; */
-    font-size: 40px;
-    font-weight: 700;
-    padding-bottom: 0px;
-    /* border-bottom: 2px solid red; */
-
+  /* border: solid 1px rgb(255, 0, 191); */
+  margin: 20px 0px 0px 0px;
+  /* width: 450px; */
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: firebrick;
+  /* line-height: 0px; */
+  font-size: 40px;
+  font-weight: 700;
+  padding-bottom: 0px;
+  /* border-bottom: 2px solid red; */
 }
 
 .title2 {
-    /* border: solid 1px rgb(255, 0, 191); */
-    margin: 0 auto;
-    /* width: 450px; */
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* color: firebrick; */
-    line-height: 10pt;
-    color: rgb(44, 44, 44);
-    /* border-bottom: 5px solid rgb(184, 184, 184); */
-    font-size: 14pt;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-    font-weight: 700;
+  /* border: solid 1px rgb(255, 0, 191); */
+  margin: 0 auto;
+  /* width: 450px; */
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* color: firebrick; */
+  line-height: 10pt;
+  color: rgb(44, 44, 44);
+  /* border-bottom: 5px solid rgb(184, 184, 184); */
+  font-size: 14pt;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  font-weight: 700;
 }
 
 .title3 {
-    /* border: solid 1px rgb(255, 0, 191); */
-    margin: 0 auto;
-    /* width: 450px; */
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* color: firebrick; */
-    line-height: 10pt;
-    color: rgb(44, 44, 44);
-    /* border-bottom: 5px solid rgb(184, 184, 184); */
-    font-size: 12pt;
-    margin: 20px 0px 10px 0px;
+  /* border: solid 1px rgb(255, 0, 191); */
+  margin: 0 auto;
+  /* width: 450px; */
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* color: firebrick; */
+  line-height: 10pt;
+  color: rgb(44, 44, 44);
+  /* border-bottom: 5px solid rgb(184, 184, 184); */
+  font-size: 12pt;
+  margin: 20px 0px 10px 0px;
 
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .underTitle {
-    /* border: solid 1px rgb(255, 0, 191); */
-    margin: 0 auto;
-    /* width: 450px; */
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* color: firebrick; */
-    /* line-height: 0pt; */
-    color: rgb(44, 44, 44);
+  /* border: solid 1px rgb(255, 0, 191); */
+  margin: 0 auto;
+  /* width: 450px; */
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* color: firebrick; */
+  /* line-height: 0pt; */
+  color: rgb(44, 44, 44);
 }
 
-
 .form {
-    /* border: solid 1px rgb(55, 0, 255); */
-    margin: 0 auto;
+  /* border: solid 1px rgb(55, 0, 255); */
+  margin: 0 auto;
 
-    /* width: 450px; */
-    text-align: center;
-    /* min-width: 220px; */
+  /* width: 450px; */
+  text-align: center;
+  /* min-width: 220px; */
 }
 
 .infobar {
-    /* border: solid 1px rgb(0, 255, 55); */
-    margin: 0 auto;
-    /* width: 280px; */
-    text-align: center;
-    padding: 0px 5px 5px 5px;
-    height: 20px;
-    color: firebrick;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 16pt;
-    font-weight: 400;
-    /* font-style: italic; */
+  /* border: solid 1px rgb(0, 255, 55); */
+  margin: 0 auto;
+  /* width: 280px; */
+  text-align: center;
+  padding: 0px 5px 5px 5px;
+  height: 20px;
+  color: firebrick;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 16pt;
+  font-weight: 400;
+  /* font-style: italic; */
 }
 
 .resultBox {
-    /* margin: 0 auto; */
-    /* width: 100px; */
-    /* border: solid 1px rgb(255, 72, 0); */
-    padding-top: 20px;
-    text-align: left;
-    display: inline-block;
+  /* margin: 0 auto; */
+  /* width: 100px; */
+  /* border: solid 1px rgb(255, 72, 0); */
+  padding-top: 20px;
+  text-align: left;
+  display: inline-block;
 }
 
 .result {
-    /* border: solid 1px rgb(208, 255, 0); */
+  /* border: solid 1px rgb(208, 255, 0); */
 
-    margin: 0 auto;
-    padding: 10px 0px 10px 0px;
-    /* width: 0px; */
-    text-align: left;
-    color: rgb(44, 44, 44);
-    font-size: 18pt;
-    line-height: 10pt;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
+  margin: 0 auto;
+  padding: 10px 0px 10px 0px;
+  /* width: 0px; */
+  text-align: left;
+  color: rgb(44, 44, 44);
+  font-size: 18pt;
+  line-height: 10pt;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
 }
 
 .userNumber {
-    margin: 0 auto;
-    padding: 10px 0px 10px 0px;
-    width: 310px;
-    text-align: left;
-    color: firebrick;
-    font-size: 18pt;
-    line-height: 10pt;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
+  margin: 0 auto;
+  padding: 10px 0px 10px 0px;
+  width: 310px;
+  text-align: left;
+  color: firebrick;
+  font-size: 18pt;
+  line-height: 10pt;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
 }
 
 .input {
-    border: solid 3px rgb(255, 187, 0);
-    border-radius: 15px;
-    padding: 3px;
-    margin: 5px;
-    font-size: 30px;
-    background-color: rgb(236, 236, 236);
+  border: solid 3px rgb(255, 187, 0);
+  border-radius: 15px;
+  padding: 3px;
+  margin: 5px;
+  font-size: 30px;
+  background-color: rgb(236, 236, 236);
 }
 
 .input:focus {
-    outline: none;
+  outline: none;
 }
 
 .link {
--webkit-tap-highlight-color: rgba(0, 0, 0, 0);  
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .divButton {
-    /* border: solid 1px red; */
-    padding-top: 10px;
-
+  /* border: solid 1px red; */
+  padding-top: 10px;
 }
 
 .button {
-    width: 180px;
-    height: 40px;
-    border: solid 3px rgb(255, 187, 0);
-    background-color: rgb(255, 187, 0);
-    padding: 3px;
-    border-radius: 15px;
-    font-size: 15px;
-    color: rgb(34, 34, 34);
-    margin: 0px 10px 0px 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
-    cursor: pointer; 
-    -webkit-tap-highlight-color: rgba(81, 12, 241, 0);   
+  width: 180px;
+  height: 40px;
+  border: solid 3px rgb(255, 187, 0);
+  background-color: rgb(255, 187, 0);
+  padding: 3px;
+  border-radius: 15px;
+  font-size: 15px;
+  color: rgb(34, 34, 34);
+  margin: 0px 10px 0px 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  cursor: pointer;
+  -webkit-tap-highlight-color: rgba(81, 12, 241, 0);
 }
 
 .button__game-button {
-    height: 60px;
-    padding: 10px 6px 10px 6px;
-    font-size: 20px;
+  height: 60px;
+  padding: 10px 6px 10px 6px;
+  font-size: 20px;
 }
 
 .button:hover {
-    color: rgb(70, 70, 70);    
+  color: rgb(70, 70, 70);
 }
 
-.button:active {   
-    border: solid 3px rgb(238, 174, 0);
-    background-color: rgb(238, 174, 0);    
+.button:active {
+  border: solid 3px rgb(238, 174, 0);
+  background-color: rgb(238, 174, 0);
 }
 
-.button:disabled {    
-    opacity: 50%;
+.button:disabled {
+  opacity: 50%;
 }
 
 .form_radio_group {
-    /* border: solid 1px rgb(208, 255, 0); */
-    display: inline-block;
-    overflow: hidden;
-    font-size: 30px;
-
+  /* border: solid 1px rgb(208, 255, 0); */
+  display: inline-block;
+  overflow: hidden;
+  font-size: 30px;
 }
 
 .form_radio_group-item {
-    display: inline-block;
-    float: left;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    
+  display: inline-block;
+  float: left;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.form_radio_group input[type=radio] {
-    display: none;
-    padding: 10px;
+.form_radio_group input[type="radio"] {
+  display: none;
+  padding: 10px;
 }
 
 .form_radio_group label {
-    display: inline-block;
-    cursor: pointer;
-    padding: 10px 15px;
-    line-height: 34px;
-    border: 1px solid #999;
-    border-right: none;
-    user-select: none;
-    color: rgb(34, 34, 34)
+  display: inline-block;
+  cursor: pointer;
+  padding: 10px 15px;
+  line-height: 34px;
+  border: 1px solid #999;
+  border-right: none;
+  user-select: none;
+  color: rgb(34, 34, 34);
 }
 
 .form_radio_group .form_radio_group-item:first-child label {
-    border-radius: 15px 0 0 15px;
+  border-radius: 15px 0 0 15px;
 }
 
 .form_radio_group .form_radio_group-item:last-child label {
-    border-radius: 0 15px 15px 0;
-    border-right: 1px solid #999;
+  border-radius: 0 15px 15px 0;
+  border-right: 1px solid #999;
 }
 
 /* Checked */
-.form_radio_group input[type=radio]:checked+label {
-    background: rgb(255, 187, 0);
+.form_radio_group input[type="radio"]:checked + label {
+  background: rgb(255, 187, 0);
 }
 
 /* Hover */
 .form_radio_group label:hover {
-    color: rgb(70, 70, 70);
+  color: rgb(70, 70, 70);
 }
 
 .rules {
-    /* border: solid 1px rgb(208, 255, 0); */
-    margin: 0 auto;
-    width: 400px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    line-height: 20pt;
-    font-size: 16pt;
+  /* border: solid 1px rgb(208, 255, 0); */
+  margin: 0 auto;
+  width: 400px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 20pt;
+  font-size: 16pt;
 }
 
 .backLink {
-    padding-top: 30px;
-    text-align: center;
+  padding-top: 30px;
+  text-align: center;
 }
 
 .logoBox {
-    /* border: solid 1px red; */
-    /* width: 350px; */
-    text-align: center;
-    margin-top: 30px;
+  /* border: solid 1px red; */
+  /* width: 350px; */
+  text-align: center;
+  margin-top: 30px;
 }
 
 .logo {
-    /* border: solid 1px rgb(116, 31, 226); */
-    width: 250px;
-
+  /* border: solid 1px rgb(116, 31, 226); */
+  width: 250px;
 }
 
 #games {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 440px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 440px;
 }
 
 #games td,
 #games th {
-    border: 1px solid #ddd;
-    padding: 8px;
+  border: 1px solid #ddd;
+  padding: 8px;
 }
 
 #games tr:nth-child(even) {
-    background-color: #f2f2f2;
+  background-color: #f2f2f2;
 }
 
 #games tr:hover {
-    background-color: #ddd;
+  background-color: #ddd;
 }
 
 #games th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color: rgb(255, 187, 0);
-    color: rgb(34, 34, 34);
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: rgb(255, 187, 0);
+  color: rgb(34, 34, 34);
 }
 
 .loader {
-    border: 2px solid #f3f3f3; /* Light grey */
-    border-top: 2px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 12px;
-    height: 12px;
-    animation: spin 2s linear infinite;
- }
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  border: 2px solid #f3f3f3; /* Light grey */
+  border-top: 2px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  animation: spin 2s linear infinite;
 }
 
-.hide-loader{
-display:none;
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.hide-loader {
+  display: none;
 }
