--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@ body {
   background-color: rgb(236, 236, 236);
   overflow-x: hidden;
   margin-right: calc(-1 * (100vw - 100%));
+  font-family: 'Rubik', sans-serif;
+
 }
 
 .container {
@@ -20,8 +22,8 @@ body {
   margin: 20px 0px 0px 0px;
   /* width: 450px; */
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
   color: firebrick;
   /* line-height: 0px; */
   font-size: 40px;
@@ -35,8 +37,8 @@ body {
   margin: 0 auto;
   /* width: 450px; */
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
   /* color: firebrick; */
   line-height: 10pt;
   color: rgb(44, 44, 44);
@@ -52,8 +54,8 @@ body {
   margin: 0 auto;
   /* width: 450px; */
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
   /* color: firebrick; */
   line-height: 10pt;
   color: rgb(44, 44, 44);
@@ -69,8 +71,8 @@ body {
   margin: 0 auto;
   /* width: 450px; */
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
   /* color: firebrick; */
   /* line-height: 0pt; */
   color: rgb(44, 44, 44);
@@ -93,8 +95,8 @@ body {
   padding: 0px 5px 5px 5px;
   height: 20px;
   color: firebrick;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
   font-size: 16pt;
   font-weight: 400;
   /* font-style: italic; */
@@ -119,7 +121,7 @@ body {
   color: rgb(44, 44, 44);
   font-size: 18pt;
   line-height: 10pt;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   font-weight: 600;
 }
 
@@ -131,11 +133,12 @@ body {
   color: firebrick;
   font-size: 18pt;
   line-height: 10pt;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   font-weight: 600;
 }
 
 .input {
+  font-family: 'Rubik', sans-serif;
   border: solid 3px rgb(255, 187, 0);
   border-radius: 15px;
   padding: 3px;
@@ -167,7 +170,8 @@ body {
   font-size: 15px;
   color: rgb(34, 34, 34);
   margin: 0px 10px 0px 10px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Rubik', sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   font-weight: 600;
   cursor: pointer;
   -webkit-tap-highlight-color: rgba(81, 12, 241, 0);
@@ -244,8 +248,8 @@ body {
   /* border: solid 1px rgb(208, 255, 0); */
   margin: 0 auto;
   width: 400px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
   line-height: 20pt;
   font-size: 16pt;
 }
@@ -268,7 +272,7 @@ body {
 }
 
 #games {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   border-collapse: collapse;
   width: 440px;
 }
