--- a/src/App.css
+++ b/src/App.css
@@ -147,6 +147,10 @@ body {
   background-color: rgb(236, 236, 236);
 }
 
+.input_readonly {
+  background-color: rgb(219, 219, 219);
+}
+
 .input:focus {
   outline: none;
 }
